some little fixes

--- a/ClientApp/src/app/components/address/address.component.scss
+++ b/ClientApp/src/app/components/address/address.component.scss
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    align-items: flex-start;  /* Align vertically at the top */
-    gap: 12px;               /* Space between icon and text */
+    align-items: flex-start;
+    gap: 12px;
   }
   
