--- a/ClientApp/src/app/components/sidebar/sidebar.component.scss
+++ b/ClientApp/src/app/components/sidebar/sidebar.component.scss
@@ -3,7 +3,7 @@
 }
 
 mat-sidenav {
-    border-radius: 0px !important; /* Override Material default */
+    border-radius: 0px !important; // Override material default
     background-color: var(--background-white);
     box-shadow: -6px 0 12px rgba(0, 0, 0, 0.20);
 }
