--- a/ClientApp/src/app/pages/artist-details/artist-details.component.scss
+++ b/ClientApp/src/app/pages/artist-details/artist-details.component.scss
@@ -1,9 +1,9 @@
 @use '../../../styles/details.scss';
 
 .wrapper {
-    display: flex; /* Enables side-by-side alignment */
-    align-items: flex-start; /* Aligns items at the top */
-    gap: 20px; /* Adds spacing between textarea and image */
+    display: flex; 
+    align-items: flex-start; 
+    gap: 20px;
     margin-top: 16px;
     width: 100%
 }
