--- a/ClientApp/src/app/pages/event-checkout/event-checkout.component.scss
+++ b/ClientApp/src/app/pages/event-checkout/event-checkout.component.scss
@@ -1,6 +1,6 @@
 .container {
   display: flex;
-  justify-content: space-between;  /* Ensures space between the left and right sections */
+  justify-content: space-between;
   padding: 32px 16px;
   max-width: 1000px;
   margin: 0 auto;
