--- a/ClientApp/src/app/pages/profile-menu/profile-menu.component.scss
+++ b/ClientApp/src/app/pages/profile-menu/profile-menu.component.scss
@@ -1,7 +1,7 @@
 .container {
     display: flex;
-    max-width: 1200px;     /* or whatever width you prefer */
-    margin: 0 auto;        /* centers the wrapper horizontally */
+    max-width: 1200px;
+    margin: 0 auto;
     height: 100vh;
   }
 
