--- a/ClientApp/src/app/components/card-details/card-details.component.scss
+++ b/ClientApp/src/app/components/card-details/card-details.component.scss
@@ -1,15 +1,15 @@
 .card-container {
     display: flex;
     flex-direction: column;
-    border: 2px solid #ccc; /* Add border */
-    border-radius: 25px; /* Rounded corners for squircle effect */
+    border: 2px solid #ccc;
+    border-radius: 25px;
     padding: 20px;
 }
   
 .wrapper {
     display: flex;
     gap: 10px;
-    align-items: stretch; /* Ensures children stretch if necessary */
+    align-items: stretch;
 }
   
 .nested-wrapper {
