--- a/ClientApp/src/app/components/config/image/image.component.scss
+++ b/ClientApp/src/app/components/config/image/image.component.scss
@@ -1,23 +1,23 @@
 .image-upload-container {
-    position: relative; /* Needed to position the button inside the container */
+    position: relative; // Needed to position the button inside the container
     display: inline-block;
 }
 
 .btn-upload {
-    position: absolute; /* Positions the button absolutely inside the container */
-    top: 50%;           /* Centers vertically */
-    left: 50%;          /* Centers horizontally */
-    transform: translate(-50%, -50%); /* Adjusts the button so it's exactly centered */
+    position: absolute; // Positions the button absolutely inside the container 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 10px 20px;
     font-size: 16px;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
-    color: white; /* Text color */
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white; 
     border: none;
     border-radius: 8px;
     display: flex;
     align-items: center;
     justify-content: center;
-    visibility: visible; /* Make sure the button is visible when in edit mode */
+    visibility: visible;
 }
 
 .placeholder {
