--- a/ClientApp/src/app/components/headers/headers.component.scss
+++ b/ClientApp/src/app/components/headers/headers.component.scss
@@ -3,5 +3,5 @@
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     justify-content: end;
     align-items: start;
-    gap: 10px; //10px gap between each grid item
+    gap: 10px; 
 }
