--- a/ClientApp/src/app/pages/listing-applications/listing-applications.component.scss
+++ b/ClientApp/src/app/pages/listing-applications/listing-applications.component.scss
@@ -1,11 +1,11 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); // or 400px if you want
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     gap: 1.5rem;
     max-width: 1000px;
     margin: 0 auto;
     padding: 2rem;
-    align-items: start; /* important! */
+    align-items: start;
     min-height: 100vh
   }
   
