--- a/ClientApp/src/app/shared/components/checkout.component.scss
+++ b/ClientApp/src/app/shared/components/checkout.component.scss
@@ -4,7 +4,7 @@
 
 .container {
     display: flex;
-    justify-content: space-between;  /* Ensures space between the left and right sections */
+    justify-content: space-between;
     padding: 32px 16px;
     max-width: 1000px;
     margin: 0 auto;
@@ -74,9 +74,9 @@
 
   @container (max-width: 800px) {
     .container {
-      flex-direction: column;     /* Stack items vertically */
-      align-items: flex-start;      /* All items align at the left */
-      justify-content: flex-start;  /* No extra space pushing right items away */
+      flex-direction: column;     // Stack items vertically
+      align-items: flex-start;      // All items align at the left 
+      justify-content: flex-start;  // No extra space pushing right items away 
     }
   }
   
