--- a/ClientApp/src/app/pages/artist-dashboard/artist-dashboard.component.html
+++ b/ClientApp/src/app/pages/artist-dashboard/artist-dashboard.component.html
@@ -15,7 +15,7 @@
         </div>
         <div section-three>
             <h2 class="title">Finance</h2>
-
+            <app-transactions></app-transactions>
         </div>
     </app-dashboard-layout>
 }@else {
